--- a/para_o_lar/package.json
+++ b/para_o_lar/package.json
@@ -8,7 +8,7 @@
     "start": "nodemon server.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Carol SN",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
