--- a/para_o_lar/package.json
+++ b/para_o_lar/package.json
@@ -1,7 +1,6 @@
 {
   "name": "para_o_lar",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -14,5 +13,6 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "nodemon": "^2.0.7"
-  }
+  },
+  "description": ""
 }
